update docs and categories order

--- a/src/content/blog/create-astro-component.mdx
+++ b/src/content/blog/create-astro-component.mdx
@@ -1,6 +1,6 @@
 ---
 heroImage: ../../assets/images/placeholder-hero.jpg
-category: Category 2
+category: Engineering
 description: Learn how to create your first Astro component.
 pubDate: 2022-07-01T22:00:00.000Z
 tags:
