--- a/src/content/blog/Data-Science-AB-Testing.mdx
+++ b/src/content/blog/Data-Science-AB-Testing.mdx
@@ -11,9 +11,9 @@ tags:
 title: 'Data Science: A/B Testing'
 ---
 
-# `1` - A/B Testing
+# 1 - A/B Testing
 
-## `1.1` - What is A/B test
+## 1.1 - What is A/B test
 
 - An A/B test is an experiment
   - All elements are constant except for one variable
@@ -32,7 +32,7 @@ title: 'Data Science: A/B Testing'
   - A/B/N tests
 - different names: A/B/N tests, randomized controlled experiments, controlled experiments, split tests
 
-## `1.2` - Why A/B test
+## 1.2 - Why A/B test
 
 - Goal
   - make data driven decisions only when results are **reliable** and **repeatable** ⇒ make right decision
@@ -42,7 +42,7 @@ title: 'Data Science: A/B Testing'
   - able to detect small changes that are hard to detect with other techniques, such as change over time
   - able to detect unexpected change
 
-## `1.3` - Steps to run A/B tests
+## 1.3 - Steps to run A/B tests
 
 - Steps:
   1. Prerequisites
@@ -51,7 +51,7 @@ title: 'Data Science: A/B Testing'
   4. Result to Decision
   5. Post-launch monitoring
 
-### `1.3.1` Step 1: Prerequisites
+### 1.3.1 Step 1: Prerequisites
 
 Here are the experiment prerequisites before running the experiment:
 
@@ -70,7 +70,7 @@ Here are the experiment prerequisites before running the experiment:
      - How many is enough?
        - thousands randomization unit: larger the number the smaller effect can be detected
 
-### `1.3.2` Step 2: Experiment Design
+### 1.3.2 Step 2: Experiment Design
 
 Things to be considered
 
@@ -87,7 +87,7 @@ Things to be considered
    - Day of week
    - Primacy and novelty effect
 
-### `1.3.3` Step 3: Running Experiment
+### 1.3.3 Step 3: Running Experiment
 
 - Collect data
 
@@ -97,7 +97,7 @@ Things to be considered
 
   - Utilize companies platform which is already done automatically
 
-### `1.3.4` Step 4: Result to Decision
+### 1.3.4 Step 4: Result to Decision
 
 Check & interpret results to make decisions (Data Scientists spend the most time)
 
@@ -119,7 +119,7 @@ Check & interpret results to make decisions (Data Scientists spend the most time
      - When costs are low
        - Launch any positive changes
 
-### `1.3.5` Step 5: Post-launch Monitoring
+### 1.3.5 Step 5: Post-launch Monitoring
 
 Long-term effect:
 
