--- a/src/content/blog/astro.mdx
+++ b/src/content/blog/astro.mdx
@@ -1,6 +1,6 @@
 ---
 heroImage: ../../assets/images/placeholder-about.jpg
-category: Category 2
+category: Engineering
 description: TypeScript2 description here 2
 pubDate: 2022-07-01T22:00:00.000Z
 tags:
